# AllegroSpaceShooter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  notes.md  startup.md  vcpkg.json
src/: allegro_util.h  assetloader.cpp  assetloader.h  atomicpool.h  camera.cpp  camera.h  common.h  comps.h  consts.h  enemy.cpp  enemy.h  eventloop.cpp  eventloop.h  file.cpp  file.h  framecount.h  game.cpp  game.h  input.cpp  input.h  main.cpp  maths.h  pool.h  settings.cpp  settings.h  threadpool.cpp  threadpool.h  userdata.cpp  userdata.h  weapons.cpp  weapons.h  world.cpp  world.h
src/assets/shaders/: red.glsl
src/util/: async_scope.h  circularqueue.h  common.h  duration.h  fixedstack.h  maths.h  observer.h  rnd.h
